--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
     },
     "plugins": [
       "expo-router",
+      "@react-native-firebase/app",
       [
         "expo-splash-screen",
         {
@@ -33,7 +34,13 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-build-properties",
+      {
+        "ios": {
+           "useFrameworks": "static"
+        }
+      }
     ],
     "experiments": {
       "typedRoutes": true
